--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Test Page</title>
-        <body><h1>Test Page</h1></body>
-    </head>
+<html lang="en-us">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto&display=swap" rel="stylesheet">
+  <link href="css/small.css" rel="stylesheet" />
+  <link href="css/medium.css" rel="stylesheet" />
+  <title>Samuel Witt WDD 230 Assignment Portal</title>
+</head>
+
+<body>
+  <header>
+    <img src="assets/me.jpg" alt="Samuel Witt" class="me">
+    <h1>Samuel Witt</h1>
+  </header>
+  <main>
+    <h2>WDD 230: Assigment Portal</h2>
+    <ul>
+      <li>Lesson 02: <a href="">Assigment Link</a></li>
+      <li>Lesson 03: <a href="">Assigment Link</a></li>
+      <li>Lesson 04: <a href="">Assigment Link</a></li>
+    </ul>
+  </main>
+  <footer>
+    &copy;2020 | Samuel Witt | Idaho |
+    <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+    <br>
+    Last Date Updated: <span id="currentdate"></span>
+  </footer>
+  <script src="main.js"></script>
+</body>
 </html>
