--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <h2>WDD 230: Assigment Portal</h2>
     <ul>
-      <li>Lesson 02: <a href="">Assigment Link</a></li>
+      <li>Lesson 02: <a href="/wdd230/ValiantWolf.github.io/ValiantWolf.github.io/lesson2/design-principles.html">Assigment Link</a></li>
       <li>Lesson 03: <a href="">Assigment Link</a></li>
       <li>Lesson 04: <a href="">Assigment Link</a></li>
     </ul>
