--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="cssLesson2/normalize2.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto&display=swap" rel="stylesheet">
     <link href="cssLesson2/small2.css" rel="stylesheet" />
-    <link href="cssLesson2/medium.css" rel="stylesheet" />
+    <link href="cssLesson2/medium2.css" rel="stylesheet" />
     <link href="cssLesson2/large2.css" rel="stylesheet" />
     <title>Samuel Witt WDD 230 Lesson 2</title>
 </head>
