--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -24,7 +24,11 @@
         </ul>
     </nav>
     <main>
-        <p>dab</p>
+        <table class="colors">
+            <tr><th>Background</th><th>Primary</th><th>Secondary</th></tr>
+            <tr><td class="background">[#ffffff]</td><td class="primary">[#26547C]</td><td class="secondary">[#809848]</td></tr>
+          </table>
+          <p>White will be used for the background for now. The blue will be used for header and nav on hover elements. Might lighten/darken this color for more contrast. The green will be used to be the background color for the footer nav and nav bar.</p>
     </main>
 </body>
 <footer>
