--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -9,7 +9,7 @@
     <link href="css/small.css" rel="stylesheet" />
     <link href="css/medium.css" rel="stylesheet" />
     <link href="css/large.css" rel="stylesheet" />
-    <title>Samuel Witt WDD 230 Lesson 3</title>
+    <title>Weather Boi</title>
 </head>
 <body>
     <header>
@@ -24,7 +24,12 @@
         </ul>
     </nav>
     <main>
-        <p>yeet</p>
+        <h3>Site Purpose</h3>
+        <p></p>
+        <h3>Site Domain</h3>
+        <p></p>
+        <h3>Site Logo</h3>
+        <img src="assets/Weather Boi.png" alt="Logo" class="Logo">
     </main>
 </body>
 <footer>
