--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -24,7 +24,27 @@
         </ul>
     </nav>
     <main>
-        <p>ya</p>
+        <h3>
+            Typography
+          </h3>
+          <h4>
+            Heading Font: Roboto
+          </h4>
+          <p>
+            I thought this font looked really great and have enjoyed it as my heading font style.
+          </p>
+          <h4>
+            Paragraph Font: Open Sans Condensed
+          </h4>
+          <p>
+            I feel this font style really compliments the heading font really well.
+          </p>
+          <h4>
+            Normal paragraph example
+          </h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam perferendis perspiciatis quaerat nihil officiis maxime, modi nam sed rem deserunt dolore placeat et ab soluta itaque ratione minus, asperiores eligendi consectetur beatae explicabo vero, voluptatibus non? Quod facere a pariatur obcaecati facilis, nihil porro, voluptatum consectetur quidem laudantium hic doloribus?
+          </p>
     </main>
 </body>
 <footer>
