--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2>WDD 230: Assigment Portal</h2>
     <ul>
       <li>Lesson 02: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson2/design-principles.html">Assigment Link</a></li>
-      <li>Lesson 03: <a href="">Assigment Link</a></li>
+      <li>Lesson 03: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson3/index.html">Assigment Link</a></li>
       <li>Lesson 04: <a href="">Assigment Link</a></li>
     </ul>
   </main>
