--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -24,7 +24,17 @@
         </ul>
     </nav>
     <main>
-        <p>yup</p>
+        <h3>Target audience</h3>
+        <p>When you are on the go the last thing you need is something stopping you. Weather can be a major factor in what you do on any given day and that is why Weather Boi is here to help. It is meant to help people who are busy and just need a quick look at our website. </p>
+        <h3>Personas</h3>
+        <p>Persona 1: Bobert is your average 9-5 desk job dad. When in his prime he was the star player on his highschool football team. He doesn't have much free time and wants to make the time he does have count.</p>
+        <p>Persona 2: Karen is a soccer mom who has seven children. Her schedule is always packed from bringing each kid to their separate practices. She needed to make sure that she never wasted time by driving somewhere just to have it canceled because of weather.</p>
+        <h3>Scenarios</h3>
+        <p>Scenario 1: Bobert wants to ride his bike to work and checks his phone beforehand to see if there is supposed to be rain or snow.</p>
+        <p>Scenario 2: Bobert want to know if it snowed while he was at work to know wether or not he should go on the freeway or backroads</p>
+        <p>Scenario 3: Karen's middle child Sally has tennis practice outside and needs to know if she should reschedule her appointment due to weather. She decided to check Weather Boi and was able to call in advance.</p>
+        <p>Scenario 4: Karen wants to go out tonight but doesn't know if it is going to be chilly.</p>
+        <p>Scenario 5: Karen is upset because it started to rain and she didn't have an umbrella. She checked the weather and saw that it was supposed to end soon which made her happy. </p>
     </main>
 </body>
 <footer>
