--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -25,7 +25,7 @@
     </nav>
     <main>
         <h3>Site Purpose</h3>
-        <p>Our purpose is to help people in the (whatever county is chosen) better plan for their days. Now with Weather Boi you will be able to observe up to date and accreate weather information. We know that living in Idaho it can seem that one day can be a scourching blaze while the next being a chilly blizzard. Now you never have to be surprised by just asking...<b>wouldn't you like to know?</b></p>
+        <p>Our purpose is to help people in the (whatever county is chosen for assignment) better plan for their days. Now with Weather Boi you will be able to observe up to date and accreate weather information. We know that living in Idaho it can seem that one day can be a scourching blaze while the next being a chilly blizzard. Now you never have to be surprised by just asking...<b>wouldn't you like to know?</b></p>
         <h3>Site Domain</h3>
         <p>WeatherBoi.com</p>
         <h3>Site Logo</h3>
