--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -12,14 +12,17 @@
 </head>
 <body>
     <header>
+        <img src="assets/Weather Boi.png" alt="Logo" class="Logo">
         <h1>Weather Boi</h1>
     </header>
     <nav>
         <ul class= "nav">
-            <li><a href="index.html">Site Purpose</a></li>
-            <li><a href="target-audience.html">Target audience</a></li>
-            <li><a href="color-scheme.html">Color Scheme</a></li>
-            <li><a href="typography.html">Typography</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Preston</a></li>
+            <li><a href="#">Soda Springs</a></li>
+            <li><a href="#">Fish Haven</a></li>
+            <li><a href="#">Storm Center</a></li>
+            <li><a href="#">Gallery</a></li>
         </ul>
     </nav>
     <main>
@@ -28,7 +31,7 @@
         <h3>Site Domain</h3>
         <p>WeatherBoi.com</p>
         <h3>Site Logo</h3>
-        <img src="assets/Weather Boi.png" alt="Logo" class="Logo">
+        
     </main>
 </body>
 <footer>
@@ -37,5 +40,5 @@
     <br>
     Last Date Updated: <span id="currentdate"></span>
 </footer>
-<script src="lesson3.js"></script>
+<script src="js.js"></script>
 </html>
