--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto&display=swap" rel="stylesheet">
     <link href="css/small.css" rel="stylesheet" />
     <link href="css/medium.css" rel="stylesheet" />
+    <link href="css/large.css" rel="stylesheet" />    
     <title>Weather Boi</title>
 </head>
 <body>
@@ -17,6 +18,7 @@
     </header>
     <nav>
         <ul class= "nav">
+            <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
             <li><a href="#">Home</a></li>
             <li><a href="#">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
@@ -26,11 +28,10 @@
         </ul>
     </nav>
     <main>
-        <h3>Site Purpose</h3>
-        <p>Our purpose is to help people in the (whatever county is chosen for assignment) better plan for their days. Now with Weather Boi you will be able to observe up to date and accreate weather information. We know that living in Idaho it can seem that one day can be a scourching blaze while the next being a chilly blizzard. Now you never have to be surprised by just asking...<b>wouldn't you like to know?</b></p>
-        <h3>Site Domain</h3>
-        <p>WeatherBoi.com</p>
-        <h3>Site Logo</h3>
+        <h2>Preston Idaho</h2>
+        <h3>Hero with weather summary</h3>
+        <h3>5 Day forecast</h3>
+        <h3>Contact Information</h3>
         
     </main>
 </body>
@@ -40,5 +41,5 @@
     <br>
     Last Date Updated: <span id="currentdate"></span>
 </footer>
-<script src="js.js"></script>
+<script src="date.js"></script>
 </html>
