--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Weather Site">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Samuel Witt">
+
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto&display=swap" rel="stylesheet">
     <link href="css/small.css" rel="stylesheet" />
@@ -13,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="assets/Weather Boi.png" alt="Logo" class="logo">
+        <img src="assets/weatherBoi.png" alt="Logo" class="logo">
         <div>
             <h1>Weather Boi</h1>
             <p>Never be surprised again.</p>
@@ -37,13 +41,14 @@
         <h3>Contact Information</h3>
         
     </main>
-</body>
-<footer>
-    &copy;2020 | Samuel Witt | Idaho |
-    <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
-    <br>
+
+    <footer>
+        &copy;2020 | Samuel Witt | Idaho |
+        <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+        <br>
     Last Date Updated: <span id="currentdate"></span>
-</footer>
-<script src="js/date.js"></script>
-<script src="js/ham.js"></script>
+    </footer>
+    <script src="js/date.js"></script>
+    <script src="js/ham.js"></script>
+</body>
 </html>
