--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="css/normalize.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto&display=swap" rel="stylesheet">
   <link href="css/small.css" rel="stylesheet" />
@@ -21,7 +22,8 @@
     <ul>
       <li>Lesson 02: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson2/design-principles.html">Assigment Link</a></li>
       <li>Lesson 03: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson3/index.html">Assigment Link</a></li>
-      <li>Lesson 04: <a href="">Assigment Link</a></li>
+      <li>Lesson 04: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson4/index.html">Assigment Link</a></li>
+      <li>Lesson 04: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson5/index.html">Assigment Link</a></li>
     </ul>
   </main>
   <footer>
