--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <li>Lesson 03: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson3/index.html">Assigment Link</a></li>
       <li>Lesson 04: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson4/index.html">Assigment Link</a></li>
       <li>Lesson 05: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson5/index.html">Assigment Link</a></li>
+      <li>Lesson 06: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson6/index.html">Assigment Link</a></li>
     </ul>
   </main>
   <footer>
