--- a/presentation/index.html
+++ b/presentation/index.html
@@ -17,12 +17,12 @@
     <h2>Corners</h2>
     <div class="corner">
         <h2 class="radius">border-radius</h2>
+        <h2 class="swanky">border-radius</h2>
         <h2 class="linear">linear-gradient</h2>
-        <h2 class="radial">radial-gradient</h2>
     </div>
    
     <h2>Borders</h2>
-<p>This property specifies what kind of border to display:</p>
+<p>The border-style: property specifies what kind of border to display:</p>
 
         <h3>Normal</h3>
         <p class="dotted">A dotted border.</p>
@@ -41,6 +41,24 @@
 
 
 <h2>Shadow</h2>
+<div class="shadow">
+    <div class="boxBack1">
+        <h4 class="box1">box-shadow</h4>
+    </div>
+    <div class="boxBack2">
+        <h4 class="box2">box-shadow</h4>
+    </div>
+    <div class="boxBack3">
+        <h4 class="box3">box-shadow</h4>
+    </div>
+    <div class="boxBack4">
+        <h4 class="box4">box-shadow</h4>
+    </div>
+    <div class="boxBack5">
+            <h4 class="box5">box-shadow</h4>
+    </div>
+</div>
+
 
 
     
