--- a/presentation/index.html
+++ b/presentation/index.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     <h1>Samuel Witt's week 7 presentaion</h1>
+    <h2>Video</h2>
+    <video src="assets/CSS Corners^J Borders and Shadows.mp4" width="700px" height="auto" controls></video>
+
     <h2>Corners</h2>
     <div class="corner">
         <h2 class="radius">border-radius</h2>
