--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <li>Lesson 05: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson5/index.html">Assigment Link</a></li>
       <li>Lesson 06: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson6/index.html">Assigment Link</a></li>
       <li>Lesson 07: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/index.html">Assigment Link</a></li>
+      <li>Presentation: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/presentation/index.html">Assigment Link</a></li>
     </ul>
   </main>
   <footer>
