--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <ul>
       <li>Lesson 02: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson2/design-principles.html">Assigment Link</a></li>
       <li>Lesson 03: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson3/index.html">Assigment Link</a></li>
-      <li>Lesson 04: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson4/index.html">Assigment Link</a></li>
+      <li>Lesson 04: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson4/preston-4.html">Assigment Link</a></li>
       <li>Lesson 05: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson5/index.html">Assigment Link</a></li>
       <li>Lesson 06: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson6/index.html">Assigment Link</a></li>
-      <li>Lesson 07: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/index.html">Assigment Link</a></li>
+      <li>Lesson 07: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/gallery-7.html">Assigment Link</a></li>
       <li>Presentation: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/presentation/index.html">Assigment Link</a></li>
     </ul>
   </main>
