--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -11,10 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto&display=swap" rel="stylesheet">
     <link href="css/lazyload.css" rel="stylesheet" />
     <link rel="shortcut icon" href="../favicon.ico">
-    <title>Weather Boi</title>
+    <title>Lazy Load</title>
 </head>
 <body>
     <h1>Progressive Loading of Images</h1>
-
+    <picture><img src="assets/placeholderImage.jpg" data-src="assets/bakedBeans1.jpg" alt="Baked Beans"></picture>
+    <picture><img src="assets/placeholderImage.jpg" data-src="assets/bakedBeans2.jpg" alt="Baked Beans"></picture>
+    <picture><img src="assets/placeholderImage.jpg" data-src="assets/bakedBeans3.jpg" alt="Baked Beans"></picture>
+    <picture><img src="assets/placeholderImage.jpg" data-src="assets/bakedBeans4.jpg" alt="Baked Beans"></picture>
+    <picture><img src="assets/placeholderImage.jpg" data-src="assets/bakedBeans5.jpg" alt="Baked Beans"></picture>
+    <!-- do you know how hard it was to find five free Baked bean photos -->
+    <h6 class="beans">mmmmmm BEANS</h6>
+    <script src="js/lazyload.js"></script>
 </body>
 </html>
