--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li>Lesson 04: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson4/preston-4.html">Assigment Link</a></li>
       <li>Lesson 05: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson5/index.html">Assigment Link</a></li>
       <li>Lesson 06: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson6/index.html">Assigment Link</a></li>
+      <li>Lazy Load: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/lazyload.html">Assigment Link</a></li>
       <li>Lesson 07: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/gallery-7.html">Assigment Link</a></li>
       <li>Presentation: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/presentation/index.html">Assigment Link</a></li>
     </ul>
