--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -39,16 +39,43 @@
         </ul>
     </nav>
     <main>
-    <picture><img src="assets/placeholder400300.jpg" data-src="assets/bakedBeans1.jpg" alt="Baked Beans"></picture>
-    <picture><img src="assets/placeholder400300.jpg" data-src="assets/bakedBeans2.jpg" alt="Baked Beans"></picture>
-    <picture><img src="assets/placeholder400300.jpg" data-src="assets/bakedBeans3.jpg" alt="Baked Beans"></picture>
-    <picture><img src="assets/placeholder400300.jpg" data-src="assets/bakedBeans4.jpg" alt="Baked Beans"></picture>
-    <picture><img src="assets/placeholder400300.jpg" data-src="assets/bakedBeans5.jpg" alt="Baked Beans"></picture>
-    <picture><img src="assets/placeholder400300.jpg" data-src="assets/bakedBeans1.jpg" alt="Baked Beans"></picture>
-    <picture><img src="assets/placeholder400300.jpg" data-src="assets/bakedBeans2.jpg" alt="Baked Beans"></picture>
-    <picture><img src="assets/placeholder400300.jpg" data-src="assets/bakedBeans3.jpg" alt="Baked Beans"></picture>
-    <picture><img src="assets/placeholder400300.jpg" data-src="assets/bakedBeans4.jpg" alt="Baked Beans"></picture>
-    <picture><img src="assets/placeholder400300.jpg" data-src="assets/bakedBeans5.jpg" alt="Baked Beans"></picture>
+        <h2>Gallery</h2>
+        <figure>
+            <img src="assets/placeholder300_226.jpg" data-src="assets/cloudyForest.jpg" alt="Cloudy Forest">
+            <figcaption>Cloudy Forest</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/placeholder300_226.jpg" data-src="assets/darkStormClouds.jpg" alt="Dark Storm Clouds">
+            <figcaption>Dark Storm Clouds</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/placeholder300_226.jpg" data-src="assets/fog.jpg" alt="Foggy Farm">
+            <figcaption>Foggy Farm</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/placeholder300_226.jpg" data-src="assets/foggyForest.jpg" alt="Foggy Forest">
+            <figcaption>Foggy Forest</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/placeholder300_226.jpg" data-src="assets/pinkClouds.jpg" alt="Pink Clouds">
+            <figcaption>Pink Clouds</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/placeholder300_226.jpg" data-src="assets/stormClouds.jpg" alt="Storm Clouds">
+            <figcaption>Storm Clouds</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/placeholder300_226.jpg" data-src="assets/stormLake.jpg" alt="Storm Lake">
+            <figcaption>Storm Lake</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/placeholder300_226.jpg" data-src="assets/sunnyWithClouds.jpg" alt="Sunny With Clouds">
+            <figcaption>Sunny With Clouds</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/placeholder300_226.jpg" data-src="assets/thunderstorm.jpg" alt="Thunderstorm">
+            <figcaption>Thunderstorm</figcaption>
+        </figure>
     </main>
         
     <footer>
@@ -65,5 +92,6 @@
     <script src="js/pancake.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script> WebFont.load({google: {families: ['Open Sans Condensed', 'Roboto']}});</script>
+    <script src="js/lazyload.js"></script>
 </body>
 </html>
