--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
   <main>
     <h2>WDD 230: Assigment Portal</h2>
     <ul>
-      <li>Lesson 02: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson2/design-principles.html">Assigment Link</a></li>
-      <li>Lesson 03: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson3/index.html">Assigment Link</a></li>
-      <li>Lesson 04: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson4/preston-4.html">Assigment Link</a></li>
-      <li>Lesson 05: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson5/index.html">Assigment Link</a></li>
-      <li>Lesson 06: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson6/index.html">Assigment Link</a></li>
-      <li>Lazy Load: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/lazyload.html">Assigment Link</a></li>
-      <li>Lesson 07: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/gallery-7.html">Assigment Link</a></li>
-      <li>Presentation: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/presentation/index.html">Assigment Link</a></li>
+      <li>Week 02: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson2/design-principles.html">Design Principles</a></li>
+      <li>Week 03: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson3/index.html">Website Planning Document</a></li>
+      <li>Week 04: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson4/preston-4.html">Preston Town Page</a></li>
+      <li>Week 05: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson5/index.html">Preston Town Page Continued</a></li>
+      <li>Week 06: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson6/index.html">Responsive Images and Font</a></li>
+      <li>Week 07: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/lazyload.html">Lazy Load</a> | <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/gallery-7.html">Gallery Page</a> | <a href="https://valiantwolf.github.io/ValiantWolf.github.io/presentation/index.html">Presentation</a></li>
+      <li>Week 08: <a href="#">Table Build</a> | <a href="#">Storm Center</a></li>
     </ul>
   </main>
   <footer>
