--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -13,8 +13,8 @@
     <table >
         <thead>
             <tr>
-            <th colspan="3">ACME WildWest</td>
-            </th>  
+            <th colspan="3">ACME WildWest</th>
+            </tr>
             <tr class="blue">
                 <td>Period</td>
                 <td>Sales</td>
