--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <li>Week 05: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson5/index.html">Preston Town Page Continued</a></li>
       <li>Week 06: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson6/index.html">Responsive Images and Font</a></li>
       <li>Week 07: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/lazyload.html">Lazy Load</a> | <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/gallery-7.html">Gallery Page</a> | <a href="https://valiantwolf.github.io/ValiantWolf.github.io/presentation/index.html">Presentation</a></li>
-      <li>Week 08: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson8/tablebuild.html">Table Build</a> | <a href="#">Storm Center</a></li>
+      <li>Week 08: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson8/tablebuild.html">Table Build</a> | <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson8/stormcenter.html">Storm Center</a></li>
     </ul>
   </main>
   <footer>
