--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -92,7 +92,7 @@
                 <label class="side"><input type="radio" name="level" value="Maybe">Maybe</label>
                 <label class="top">Additional Information or Comments<textarea name="comments" rows="7" cols="100"></textarea></label>
             </fieldset>
-            <input type="submit" value="Thank You For Helping" class="submitBtn" onclick="thanks()">
+            <input type="submit" value="Thank You For Helping" class="submitBtn" onclick="thankYou()">
         </form> 
     </main>
         
