--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -111,6 +111,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script> WebFont.load({google: {families: ['Open Sans Condensed', 'Roboto']}});</script>
     <script src="js/storm.js"></script>
-    <script>src="js/thanks.js"</script>
+    <script>src="js/thankYou.js"</script>
 </body>
 </html>
