--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -38,7 +38,7 @@
         </ul>
     </nav>
     <main>
-        <form action="thankyou.html" method="get">
+        <form action="thanks.html" method="get">
             <fieldset class="field">
                 <legend>Contact Information</legend>
                 <label class="top">Full Name*<input type="text" name="fullName" required pattern="[a-zA-Z\p{L} \.\-]{5,}"></label>
@@ -90,7 +90,7 @@
                 <label class="side"><input type="radio" name="level" value="Yes">Yes</label>
                 <label class="side"><input type="radio" name="level" value="No">No</label>
                 <label class="side"><input type="radio" name="level" value="Maybe">Maybe</label>
-                <label class="top">Additional Information or Comments<textarea name="comments" rows="7" cols="100"></textarea></label>
+                <label class="top">Additional Information or Comments<textarea name="comments" rows="7" cols="35"></textarea></label>
             </fieldset>
             <input type="submit" value="Thank You For Helping" class="submitBtn" onclick="thankYou()">
         </form> 
