--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -2,8 +2,6 @@
 <html lang="en-us">
 
 <head>
-    
-
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto&display=swap" rel="stylesheet">
     <link href="css/small.css" rel="stylesheet" />
@@ -134,9 +132,8 @@
     <script src="js/date.js"></script>
     <script src="js/ham.js"></script>
     <script src="js/pancake.js"></script>
+    <script src="js/windChill.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script> WebFont.load({google: {families: ['Open Sans Condensed', 'Roboto']}});</script>
-    <script src="js/windchill.js"></script>
-
 </body>
 </html>
