--- a/lesson9/home-wireframes.html
+++ b/lesson9/home-wireframes.html
@@ -16,11 +16,11 @@
 <body>
     <main>
         <h1>Small Wireframe</h1>
-        <img src="asset/smallWireframe.png">
+        <img src="assets/smallWireframe.png">
         <h1>Medium Wireframe</h1>
-        <img src="asset/mediumWireframe.png">
+        <img src="assets/mediumWireframe.png">
         <h1>Large Wireframe</h1>
-        <img src="asset/largeWireframe.png">
+        <img src="assets/largeWireframe.png">
     </main>
     <footer>
         Samuel Witt | BYU-Idaho | WDD 230
