--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -33,7 +33,9 @@
         </ul>
     </nav>
     <main>
-        
+        <div class="mycontent">
+            <div class="cards"></div>
+        </div>
     </main>
     <footer>
         <div class="contact">
@@ -59,5 +61,6 @@
     <script src="js/pancake.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script> WebFont.load({google: {families: ['Open Sans Condensed', 'Roboto']}});</script>
+    <script src="js/homeJSON.js"></script>
 </body>
 </html>
