--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <li>Week 07: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/lazyload.html">Lazy Load</a> | <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson7/gallery-7.html">Gallery Page</a> | <a href="https://valiantwolf.github.io/ValiantWolf.github.io/presentation/index.html">Presentation</a></li>
       <li>Week 08: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson8/tablebuild.html">Table Build</a> | <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson8/stormcenter.html">Storm Center</a></li>
       <li>Week 09: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson9/prophets.html">Prophets</a> | <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson9/home-wireframes.html">Home Wireframes</a> | <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson9/index.html">Home Page</a></li>
-      <li>Week 10: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson10/papi-test.html">API test</a> | <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson10/preston-10.html">Preston Weather API</a></li>
+      <li>Week 10: <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson10/api-test.html">API test</a> | <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson10/preston-10.html">Preston Weather API</a></li>
     </ul>
   </main>
   <footer>
