--- a/lesson11/stormCenter.html
+++ b/lesson11/stormCenter.html
@@ -29,11 +29,11 @@
     <nav>
         <ul class= "navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-            <li class= "active"><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html">Home</a></li>
+            <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html">Home</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/preston.html">Preston</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/sodaSprings.html">Soda Springs</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/fishHaven.html">Fish Haven</a></li>
-            <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/stormCenter.html">Storm Center</a></li>
+            <li class= "active"><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/stormCenter.html">Storm Center</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/gallery.html">Gallery</a></li>
         </ul>
     </nav>
@@ -97,7 +97,7 @@
     </main>
         
     <footer>
-        <div class=footer>
+        <div class=footerNone>
             &copy;2020 | Samuel Witt | Idaho |
             <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
             <br>
