--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,47 +34,12 @@
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/sodaSprings.html">Soda Springs</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/fishHaven.html">Fish Haven</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/stormCenter.html">Storm Center</a></li>
-            <li class= "active3"><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/gallery.html">Gallery</a></li>
+            <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/gallery.html">Gallery</a></li>
         </ul>
     </nav>
-    <main class="gallery">
-        <h2>Gallery</h2>
-        <figure>
-            <img src="assets/placeholder300_226.jpg" data-src="assets/cloudyForest.jpg" alt="Cloudy Forest">
-            <figcaption>Cloudy Forest</figcaption>
-        </figure>
-        <figure>
-            <img src="assets/placeholder300_226.jpg" data-src="assets/darkStormClouds.jpg" alt="Dark Storm Clouds">
-            <figcaption>Dark Storm Clouds</figcaption>
-        </figure>
-        <figure>
-            <img src="assets/placeholder300_226.jpg" data-src="assets/fog.jpg" alt="Foggy Farm">
-            <figcaption>Foggy Farm</figcaption>
-        </figure>
-        <figure>
-            <img src="assets/placeholder300_226.jpg" data-src="assets/foggyForest.jpg" alt="Foggy Forest">
-            <figcaption>Foggy Forest</figcaption>
-        </figure>
-        <figure>
-            <img src="assets/placeholder300_226.jpg" data-src="assets/pinkClouds.jpg" alt="Pink Clouds">
-            <figcaption>Pink Clouds</figcaption>
-        </figure>
-        <figure>
-            <img src="assets/placeholder300_226.jpg" data-src="assets/stormClouds.jpg" alt="Storm Clouds">
-            <figcaption>Storm Clouds</figcaption>
-        </figure>
-        <figure>
-            <img src="assets/placeholder300_226.jpg" data-src="assets/stormLake.jpg" alt="Storm Lake">
-            <figcaption>Storm Lake</figcaption>
-        </figure>
-        <figure>
-            <img src="assets/placeholder300_226.jpg" data-src="assets/sunnyWithClouds.jpg" alt="Sunny With Clouds">
-            <figcaption>Sunny With Clouds</figcaption>
-        </figure>
-        <figure>
-            <img src="assets/placeholder300_226.jpg" data-src="assets/thunderstorm.jpg" alt="Thunderstorm">
-            <figcaption>Thunderstorm</figcaption>
-        </figure>
+    <main>
+        <h2>Thank you for your submission!</h2>
+        <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/stormcenter.html">&lt;&lt; Back to Storm Center</a>
     </main>
         
     <footer>
@@ -85,13 +49,11 @@
             <br>
             Last Date Updated: <span id="currentdate"></span>
         </div>
-        
     </footer>
     <script src="js/date.js"></script>
     <script src="js/ham.js"></script>
-    <script src="js/pancake.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script> WebFont.load({google: {families: ['Open Sans Condensed', 'Roboto']}});</script>
-    <script src="js/lazyload.js"></script>
+    <script>src="js/thanks.js"</script>
 </body>
 </html>
