--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -39,7 +39,7 @@
     </nav>
     <main>
         <h2>Thank you for your submission!</h2>
-        <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/stormcenter.html">&lt;&lt; Back to Storm Center</a>
+        <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/stormCenter1.html">&lt;&lt; Back to Storm Center</a>
     </main>
         
     <footer>
