--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -24,15 +24,15 @@
     <nav>
         <ul class= "navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-            <li class= "active"><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html">Home</a></li>
-            <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/preston.html">Preston</a></li>
+            <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html">Home</a></li>
+            <li class= "active"><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/preston.html">Preston</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/sodaSprings.html">Soda Springs</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/fishHaven.html">Fish Haven</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/stormCenter.html">Storm Center</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/gallery.html">Gallery</a></li>
         </ul>
     </nav>
-    <main>
+    <main class="makeEmGrid">
         <h2>Preston Idaho</h2>
         <div class="heroWeather">
             <picture class="hero">
