--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -24,7 +24,7 @@
     <nav>
         <ul class= "navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-            <li class= "active"><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html">Home</a></li>
+            <li class= "active2"><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html">Home</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/preston.html">Preston</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/sodaSprings.html">Soda Springs</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/fishHaven.html">Fish Haven</a></li>
