--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -14,7 +14,7 @@
     <link href="css/medium.css" rel="stylesheet" />
     <link href="css/large.css" rel="stylesheet" />
     <link rel="shortcut icon" href="../favicon.ico">
-    <title>Weather Boi</title>
+    <title>Weather Boi Gallery</title>
 </head>
 <body onload="showPancake();">
     <div id="pancake">
