--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -8,7 +8,7 @@
     <link href="css/medium.css" rel="stylesheet" />
     <link href="css/large.css" rel="stylesheet" />
     <link rel="shortcut icon" href="../favicon.ico">
-    <title>Weather Boi</title>
+    <title>Weather Boi Preston</title>
 </head>
 <body onload="showPancake(); windChill();">
     <div id="pancake">
@@ -106,9 +106,10 @@
                 </tbody>
             </table>
         </div>
-        <h3>Article Title</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem expedita tempore maiores ipsa ratione tempora molestias consequatur, labore eum voluptate earum, quod quibusdam voluptatem consectetur qui? Voluptates, distinctio, voluptatem aut delectus exercitationem officiis blanditiis labore quis suscipit in eum, illo vero. Dolorum veritatis dolor veniam saepe porro. Magni ab quas id in tempora laudantium, sint possimus vitae cupiditate libero recusandae sit. Tempore vitae recusandae adipisci eos hic eius ullam aperiam consequatur exercitationem natus laudantium tenetur ab necessitatibus repellendus, ducimus, ipsum placeat dolorum modi blanditiis porro neque. Aut nostrum eum vitae architecto atque, delectus amet dolorum? Recusandae dolores explicabo eveniet odit.</p>
-        
+        <div>
+            <h3>Article Title</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem expedita tempore maiores ipsa ratione tempora molestias consequatur, labore eum voluptate earum, quod quibusdam voluptatem consectetur qui? Voluptates, distinctio, voluptatem aut delectus exercitationem officiis blanditiis labore quis suscipit in eum, illo vero. Dolorum veritatis dolor veniam saepe porro. Magni ab quas id in tempora laudantium, sint possimus vitae cupiditate libero recusandae sit. Tempore vitae recusandae adipisci eos hic eius ullam aperiam consequatur exercitationem natus laudantium tenetur ab necessitatibus repellendus, ducimus, ipsum placeat dolorum modi blanditiis porro neque. Aut nostrum eum vitae architecto atque, delectus amet dolorum? Recusandae dolores explicabo eveniet odit.</p>
+        </div>  
     </main>
     <footer>
         <div class="contact">
