--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -8,7 +8,7 @@
     <link href="css/medium.css" rel="stylesheet" />
     <link href="css/large.css" rel="stylesheet" />
     <link rel="shortcut icon" href="../favicon.ico">
-    <title>Weather Boi</title>
+    <title>Weather Boi Soda Springs</title>
 </head>
 <body onload="showPancake(); windChill();">
     <div id="pancake">
@@ -32,7 +32,7 @@
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/gallery.html">Gallery</a></li>
         </ul>
     </nav>
-    <main>
+    <main class="makeEmGrid">
         <h2>Preston Idaho</h2>
         <div class="heroWeather">
             <picture class="hero">
