--- a/lesson11/stormCenter.html
+++ b/lesson11/stormCenter.html
@@ -13,7 +13,7 @@
     <link href="css/medium.css" rel="stylesheet" />
     <link href="css/large.css" rel="stylesheet" />
     <link rel="shortcut icon" href="../favicon.ico">
-    <title>Weather Boi</title>
+    <title>Weather Boi Storm Center</title>
 </head>
 <body onload="showPancake();">
     <div id="pancake">
