--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -8,7 +8,7 @@
     <link href="css/medium.css" rel="stylesheet" />
     <link href="css/large.css" rel="stylesheet" />
     <link rel="shortcut icon" href="../favicon.ico">
-    <title>Weather Boi</title>
+    <title>Weather Boi Home</title>
 </head>
 <body onload="showPancake();">
     <div id="pancake">
