--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -24,8 +24,8 @@
     <nav>
         <ul class= "navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
-            <li class= "active"><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html">Home</a></li>
-            <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/preston.html">Preston</a></li>
+            <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html">Home</a></li>
+            <li class= "active"><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/preston.html">Preston</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/sodaSprings.html">Soda Springs</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/fishHaven.html">Fish Haven</a></li>
             <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/stormCenter.html">Storm Center</a></li>
@@ -36,9 +36,9 @@
         <h2>Preston Idaho</h2>
         <div class="heroWeather">
             <picture class="hero">
-                <source srcset="assets/medium.jpg" media="(min-width:520px) and (max-width:959px)">
-                <source srcset="assets/large.jpg" media="(min-width:960px)"> 
-                <img src="assets/small.jpg" alt="hero image">
+                <source srcset="assets/sodaSprings_600.jpg" media="(min-width:520px) and (max-width:959px)">
+                <source srcset="assets/sodaSprings_800.jpg" media="(min-width:960px)"> 
+                <img src="assets/sodaSprings_400.jpg" alt="hero image">
             </picture>
             <section class= "weatherSum">
                 <h3>Weather Summary</h3>
