--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -36,9 +36,9 @@
         <h2>Preston Idaho</h2>
         <div class="heroWeather">
             <picture class="hero">
-                <source srcset="assets/medium.jpg" media="(min-width:520px) and (max-width:959px)">
-                <source srcset="assets/large.jpg" media="(min-width:960px)"> 
-                <img src="assets/small.jpg" alt="hero image">
+                <source srcset="assets/preston_600.jpg" media="(min-width:520px) and (max-width:959px)">
+                <source srcset="assets/preston_800.jpg" media="(min-width:960px)"> 
+                <img src="assets/preston_400.jpg" alt="hero image">
             </picture>
             <section class= "weatherSum">
                 <h3>Weather Summary</h3>
