--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="../favicon.ico">
     <title>Weather Boi Preston</title>
 </head>
-<body onload="showPancake(); windChill();">
+<body onload="showPancake();">
     <div id="pancake">
         <p>Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.</p>
     </div>
@@ -53,16 +53,16 @@
                             <td><span id="temp"></span></td>
                         </tr>
                         <tr>
-                            <td class="righty">Wind Chill:</td>
-                            <td><span id="windChill"></span></td>
-                        </tr>
-                        <tr>
                             <td class="righty">Humidity:</td>
                             <td><span id="humi"></span></td>
                         </tr>
                         <tr>
                             <td class="righty">Wind Speed:</td>
                             <td><span id="windSpeed"></span></td>
+                        </tr>
+                        <tr>
+                            <td class="righty">Wind Chill:</td>
+                            <td><span id="windChill"></span></td>
                         </tr>
                     </tbody>
                 </table>
@@ -134,7 +134,6 @@
     <script src="js/ham.js"></script>
     <script src="js/pancake.js"></script>
     <script src="js/weather.js"></script>
-    <script src="js/windChill.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script> WebFont.load({google: {families: ['Open Sans Condensed', 'Roboto']}});</script>
 </body>
