--- a/404.html
+++ b/404.html
@@ -1,1 +1,11 @@
-O no this is a suprise but a welcome one
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    O no this is a suprise but a welcome one now
+</body>
+</html>
