--- a/404.html
+++ b/404.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="css/notFound.css" rel="stylesheet" />
+    <title>404</title>
 </head>
 <body>
-    O no this is a suprise but a welcome one now
+    <main>
+        <h1>404 Page Not Found</h1>
+        <h3>Click link <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html">here</a> to go back to home.</h3>
+    </main>
 </body>
 </html>
