--- a/404.html
+++ b/404.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/notFound.css" rel="stylesheet" />
     <title>404</title>
+    <style>
+    body {
+    font-size: 2rem;
+    margin: 2em auto;
+    text-align: center;
+    }
+    main {
+        padding: 1em;
+        margin: auto;
+        max-width: 80%;
+        border-radius: 1em;
+        background-color: #809848;
+    }
+    </style>
 </head>
 <body>
     <main>
